# XPL_WorkBench

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE_HEADER.txt  README.md
config_files/: .XDbg_recent_projects.json  XPL_WorkBench  gz_avionics_device.xpl  gz_avionics_device_gl.xpl  imgui.ini  prj_core_gz_nanovg.json  readme.txt
gz_core/: CMakeLists.txt
imgui_lib/: CMakeLists.txt
src/: AvionicsHost.cpp  AvionicsHost.h  CommandsTxtParse.cpp  CommandsTxtParse.h  DataRefsTxtParse.cpp  DataRefsTxtParse.h  DrawCallbackHost.h  FBO.cpp  FBO.h  FXPLM.cpp  FXPLM.h  GuiAbout.cpp  GuiAbout.h  GuiAvionicsDevice.h  GuiDatarefs.cpp  GuiDatarefs.h  GuiGraph.cpp  GuiGraph.h  GuiMemory.cpp  GuiMemory.h  GuiMessageBox.cpp  GuiMessageBox.h  GuiPluginLoader.cpp  GuiPluginLoader.h  GuiPluginMessages.cpp  GuiPluginMessages.h  GuiPlugins.cpp  GuiPlugins.h  GuiRecentProjects.cpp  GuiRecentProjects.h  GuiShaderTest.cpp  GuiShaderTest.h  GuiTextureInspector.cpp  GuiTextureInspector.h  GuiTextures.cpp  GuiTextures.h  GuiWorldControl.cpp  GuiWorldControl.h  GuiWorldView.cpp  GuiWorldView.h  (+22 more)
src/shim/: shim_XPLMDataAccess.cpp  shim_XPLMDataAccess.h  shim_XPLMDisplay.cpp  shim_XPLMGraphics.cpp  shim_XPLMPlanes.cpp  shim_XPLMPlanes.h  shim_XPLMPlugin.cpp  shim_XPLMPlugin.h  shim_XPLMProcessing.cpp  shim_XPLMProcessing.h  shim_XPLMUtilities.cpp  shim_XPLMUtilities.h  xp_dref.h
xp_sdk_shim/: CMakeLists.txt  shim_XPLMDataAccess.cpp  shim_XPLMDataAccess.h  shim_XPLMDisplay.cpp  shim_XPLMDisplay.h  shim_XPLMGraphics.cpp  shim_XPLMGraphics.h  shim_XPLMPlanes.cpp  shim_XPLMPlugin.cpp  shim_XPLMProcessing.cpp  shim_XPLMProcessing.h  shim_XPLMUtilities.cpp  shim_XPLMUtilities.h  xp_core.cpp  xp_core.h  xp_dref.cpp  xp_dref.h  xp_sdk_shim.h
